infra/logging/Elasticsearch-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: logging
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: elasticsearch-master-pod
  ports:
    - name: http
      port: 9200
      targetPort: 9200
      protocol: TCP
    - name: transport
      port: 9300
      targetPort: 9300
      protocol: TCP
